--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1176,6 +1176,24 @@
 	year={2022}
 }
 
+@misc{bronstein2021geometric,
+	title={Geometric Deep Learning: Grids, Groups, Graphs, Geodesics, and Gauges}, 
+	author={Michael M. Bronstein and Joan Bruna and Taco Cohen and Petar Veličković},
+	year={2021},
+	eprint={2104.13478},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
+@misc{perez2022topological,
+	title={The Topological BERT: Transforming Attention into Topology for Natural Language Processing}, 
+	author={Ilan Perez and Raphael Reinauer},
+	year={2022},
+	eprint={2206.15195},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
+}
+
 @misc{ChatGPT, 
 	title={ChatGPT},
 	author={OpenAI},
@@ -1186,4 +1204,22 @@
 	date=2023,
 	month=02,
 	day=02
+}
+
+@misc{openai2023gpt4,
+	title={GPT-4 Technical Report}, 
+	author={OpenAI},
+	year={2023},
+	eprint={2303.08774},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
+}
+
+@misc{bubeck2023sparks,
+	title={Sparks of Artificial General Intelligence: Early experiments with GPT-4}, 
+	author={Sébastien Bubeck and Varun Chandrasekaran and Ronen Eldan and Johannes Gehrke and Eric Horvitz and Ece Kamar and Peter Lee and Yin Tat Lee and Yuanzhi Li and Scott Lundberg and Harsha Nori and Hamid Palangi and Marco Tulio Ribeiro and Yi Zhang},
+	year={2023},
+	eprint={2303.12712},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
 }
