--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1142,6 +1142,15 @@
 	URL = {https://doi.org/10.1017/9781108975704},
 }
 
+@misc{schulman2017proximal,
+	title={Proximal Policy Optimization Algorithms}, 
+	author={John Schulman and Filip Wolski and Prafulla Dhariwal and Alec Radford and Oleg Klimov},
+	year={2017},
+	eprint={1707.06347},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
 @misc{ouyang2022training,
 	title={Training language models to follow instructions with human feedback},
 	author={Ouyang, Long and Wu, Jeff and Jiang, Xu and Almeida, Diogo and Wainwright, Carroll L and Mishkin, Pamela and Zhang, Chong and Agarwal, Sandhini and Slama, Katarina and Ray, Alex and others},
@@ -1181,6 +1190,37 @@
 	author={Michael M. Bronstein and Joan Bruna and Taco Cohen and Petar Veličković},
 	year={2021},
 	eprint={2104.13478},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
+@inproceedings{kushnareva-etal-2021-artificial,
+	title = "Artificial Text Detection via Examining the Topology of Attention Maps",
+	author = "Kushnareva, Laida  and
+	Cherniavskii, Daniil  and
+	Mikhailov, Vladislav  and
+	Artemova, Ekaterina  and
+	Barannikov, Serguei  and
+	Bernstein, Alexander  and
+	Piontkovskaya, Irina  and
+	Piontkovski, Dmitri  and
+	Burnaev, Evgeny",
+	booktitle = "Proceedings of the 2021 Conference on Empirical Methods in Natural Language Processing",
+	month = nov,
+	year = "2021",
+	address = "Online and Punta Cana, Dominican Republic",
+	publisher = "Association for Computational Linguistics",
+	url = "https://aclanthology.org/2021.emnlp-main.50",
+	doi = "10.18653/v1/2021.emnlp-main.50",
+	pages = "635--649",
+	abstract = "The impressive capabilities of recent generative models to create texts that are challenging to distinguish from the human-written ones can be misused for generating fake news, product reviews, and even abusive content. Despite the prominent performance of existing methods for artificial text detection, they still lack interpretability and robustness towards unseen models. To this end, we propose three novel types of interpretable topological features for this task based on Topological Data Analysis (TDA) which is currently understudied in the field of NLP. We empirically show that the features derived from the BERT model outperform count- and neural-based baselines up to 10{\%} on three common datasets, and tend to be the most robust towards unseen GPT-style generation models as opposed to existing methods. The probing analysis of the features reveals their sensitivity to the surface and syntactic properties. The results demonstrate that TDA is a promising line with respect to NLP tasks, specifically the ones that incorporate surface and structural information.",
+}
+
+@misc{moor2021topological,
+	title={Topological Autoencoders}, 
+	author={Michael Moor and Max Horn and Bastian Rieck and Karsten Borgwardt},
+	year={2021},
+	eprint={1906.00722},
 	archivePrefix={arXiv},
 	primaryClass={cs.LG}
 }
