--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1225,6 +1225,24 @@
 	primaryClass={cs.LG}
 }
 
+@misc{barannikov2022representation,
+	title={Representation Topology Divergence: A Method for Comparing Neural Network Representations}, 
+	author={Serguei Barannikov and Ilya Trofimov and Nikita Balabin and Evgeny Burnaev},
+	year={2022},
+	eprint={2201.00058},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
+@misc{trofimov2023learning,
+	title={Learning Topology-Preserving Data Representations}, 
+	author={Ilya Trofimov and Daniil Cherniavskii and Eduard Tulchinskii and Nikita Balabin and Evgeny Burnaev and Serguei Barannikov},
+	year={2023},
+	eprint={2302.00136},
+	archivePrefix={arXiv},
+	primaryClass={cs.LG}
+}
+
 @misc{perez2022topological,
 	title={The Topological BERT: Transforming Attention into Topology for Natural Language Processing}, 
 	author={Ilan Perez and Raphael Reinauer},
