--- a/notes/references.bib
+++ b/notes/references.bib
@@ -363,6 +363,16 @@
     primaryClass={cs.CL}
 }
 
+@inproceedings{rastogi2020towards,
+	title={Towards scalable multi-domain conversational agents: The schema-guided dialogue dataset},
+	author={Rastogi, Abhinav and Zang, Xiaoxue and Sunkara, Srinivas and Gupta, Raghav and Khaitan, Pranav},
+	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+	volume={34},
+	number={05},
+	pages={8689--8696},
+	year={2020}
+}
+
 @article{DBLP:journals/corr/abs-1908-10084,
   author    = {Nils Reimers and
                Iryna Gurevych},
@@ -914,7 +924,7 @@
 	editor = 	 {Meila, Marina and Zhang, Tong},
 	volume = 	 {139},
 	series = 	 {Proceedings of Machine Learning Research},
-	month = 	 {18--24 Jul},
+	month = 	 {6},
 	publisher =    {PMLR},
 	pdf = 	 {http://proceedings.mlr.press/v139/schlag21a/schlag21a.pdf},
 	url = 	 {https://proceedings.mlr.press/v139/schlag21a.html},
@@ -1280,4 +1290,21 @@
 	eprint={2303.12712},
 	archivePrefix={arXiv},
 	primaryClass={cs.CL}
+}
+
+@misc{bai2022training,
+	title={Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback}, 
+	author={Yuntao Bai and Andy Jones and Kamal Ndousse and Amanda Askell and Anna Chen and Nova DasSarma and Dawn Drain and Stanislav Fort and Deep Ganguli and Tom Henighan and Nicholas Joseph and Saurav Kadavath and Jackson Kernion and Tom Conerly and Sheer El-Showk and Nelson Elhage and Zac Hatfield-Dodds and Danny Hernandez and Tristan Hume and Scott Johnston and Shauna Kravec and Liane Lovitt and Neel Nanda and Catherine Olsson and Dario Amodei and Tom Brown and Jack Clark and Sam McCandlish and Chris Olah and Ben Mann and Jared Kaplan},
+	year={2022},
+	eprint={2204.05862},
+	archivePrefix={arXiv},
+	primaryClass={cs.CL}
+}
+
+@misc{lambert2022illustrating,
+	author = {Lambert, Nathan and Castricato, Louis and von Werra, Leandro and Havrilla, Alex},
+	title = {Illustrating Reinforcement Learning from Human Feedback (RLHF)},
+	journal = {Hugging Face Blog},
+	year = {2022},
+	note = {\url{https://huggingface.co/blog/rlhf}},
 }
